testsuite/tests/parsing/pr6865.compilers.reference
[
  structure_item (pr6865.ml[9+0]..[9+14]) ghost
    Pstr_extension "foo"
    [
      structure_item (pr6865.ml[9+0]..[9+14])
        Pstr_value Nonrec
        [
          <def>
            pattern (pr6865.ml[9+8]..[9+9])
              Ppat_var "x" (pr6865.ml[9+8]..[9+9])
            expression (pr6865.ml[9+12]..[9+14])
              Pexp_constant PConst_int (42,None)
        ]
    ]
  structure_item (pr6865.ml[10+0]..[10+25]) ghost
    Pstr_extension "foo"
    [
      structure_item (pr6865.ml[10+0]..[10+25])
        Pstr_value Nonrec
        [
          <def>
            pattern (pr6865.ml[10+8]..[10+9])
              Ppat_any
            expression (pr6865.ml[10+12]..[10+14])
              Pexp_construct "()" (pr6865.ml[10+12]..[10+14])
              None
          <def>
            pattern (pr6865.ml[10+19]..[10+20])
              Ppat_any
            expression (pr6865.ml[10+23]..[10+25])
              Pexp_construct "()" (pr6865.ml[10+23]..[10+25])
              None
        ]
    ]
  structure_item (pr6865.ml[11+0]..[11+14]) ghost
    Pstr_extension "foo"
    [
      structure_item (pr6865.ml[11+0]..[11+14])
        Pstr_value Nonrec
        [
          <def>
            pattern (pr6865.ml[11+8]..[11+9])
              Ppat_any
            expression (pr6865.ml[11+12]..[11+14])
              Pexp_construct "()" (pr6865.ml[11+12]..[11+14])
              None
        ]
    ]
]

File "pr6865.ml", line 9, characters 4-7:
9 | let%foo x = 42
        ^^^
Error: Uninterpreted extension 'foo'.
